--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
   <body>
     <div id="page">
     <header>
-      <section id="nav-bar">
-        <nav>
-        <img src="https://via.placeholder.com/200x70/jjjj.png">
+      <img id = "logo" src="https://via.placeholder.com/200x70/jjjj.png">
+      <section id="nav-bar"> 
+        <nav></nav>
         <a class="nav-item" href="#">Nav Item 1</a>
         <a class="nav-item" href="#">Nav Item 2</a>
         <a class="nav-item" href="#">Nav Item 3</a>
         <a class="nav-item" href="#">Nav Item 4</a>
         </nav>
-      
       </section>
        </header>
        <main>
